<resources>
    <string name="app_name">HandsonFirebase</string>
    <string name="buy">Buy</string>
    <string name="login">Login</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="Enter_name">Enter Name</string>
    <string name="Enter_email">Enter Email</string>
    <string name="Enter_password">Enter Password</string>
    <string name="Enter_confirm_password">Enter confirm Password</string>
    <string name="lable_sign_up">Sign up</string>
    <string name="lable_sign_in">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="Btn_sign_up">Sign up</string>
    <string name="Btn_login">Login</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="username">Username</string>
    <string name="temp">temp</string>
    <string name="message">Message</string>
    <string name="Garruk">Garruk</string>
    <string name="profile">profile</string>
    <string name="type_message">Type message</string>
    <string name="save">save</string>
    <string name="where_to_buy">Where to Buy</string>
    <string name="product">Product</string>
    <string name="price_you_want_to_pay">Price you want to pay</string>
    <string name="proceed">Proceed</string>
    <string name="date">Date</string>
    <string name="location">Location</string>
    <string name="price">Price</string>
    <string name="history">History</string>
    <string name="take_this_order">Take this Order</string>
    <string name="take_order">Take order</string>
    <string name="buy_order">Buy Order</string>
    <string name="confirm_the_receipt_of_goods">confirm the receipt of goods</string>
    <string name="finish">Finish</string>
</resources>