<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".activity.SignupActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lable_sign_up"
        android:textSize="20sp"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/gilroy_light"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="15dp"
        android:inputType="text"
        android:fontFamily="@font/gilroy_bold"
        android:background="@color/colorTextBackground"
        android:hint="@string/Enter_name"
        android:padding="12dp"
        android:textColor="@color/colorText" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="15dp"
        android:inputType="text"
        android:fontFamily="@font/gilroy_bold"
        android:background="@color/colorTextBackground"
        android:hint="@string/Enter_email"
        android:padding="12dp"
        android:textColor="@color/colorText" />

    <EditText
        android:id="@+id/etpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="15dp"
        android:inputType="textPassword"
        android:fontFamily="@font/gilroy_light"
        android:background="@color/colorTextBackground"
        android:hint="@string/Enter_password"
        android:padding="12dp"
        android:textColor="@color/colorText" />
    <EditText
        android:id="@+id/etConfirmpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:inputType="textPassword"
        android:fontFamily="@font/gilroy_light"
        android:layout_marginTop="15dp"
        android:background="@color/colorTextBackground"
        android:hint="@string/Enter_confirm_password"
        android:padding="12dp"
        android:textColor="@color/colorText" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSignup"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:text="@string/Btn_sign_up"
            android:textColor="@color/colorAccent"
            android:background="@color/colorPrimary"/>
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/Btn_login"
            android:textColor="@color/colorAccent"
            android:background="@color/colorPrimary"/>
    </LinearLayout>

</LinearLayout>