<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    android:id="@+id/layotUser"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="32dp"
            android:src="@drawable/ic_back"
            android:padding="5dp"
            android:layout_marginStart="10dp"
            android:id="@+id/imageBack"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/history"
            android:textStyle="bold"
            android:fontFamily="@font/gilroy_light"
            android:textSize="15sp" />
        <com.makeramen.roundedimageview.RoundedImageView
            android:layout_width="32dp"
            android:layout_weight="0.5"
            android:layout_height="32dp"
            android:src="@mipmap/ic_launcher"
            android:padding="5dp"
            app:riv_corner_radius="20dp"
            android:id="@+id/imgProfile"/>
    </LinearLayout>
    <TextView
        android:id="@+id/Product_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/product"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Product" />
    <TextView
        android:id="@+id/Date_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textColor="@color/colorText" />
    <TextView
        android:id="@+id/Price_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textColor="@color/colorText" />
    <TextView
        android:id="@+id/location_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:textColor="@color/colorText" />


</LinearLayout>