<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".activity.BuyActivity">

    <LinearLayout
        android:id="@+id/l1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_buy"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_marginStart="10dp"
            android:layout_weight="0.5"
            android:padding="5dp"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/tvUserName_buy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:fontFamily="@font/gilroy_light"
            android:text="@string/buy_order"
            android:gravity="center"
            android:textSize="15sp"
            android:textStyle="bold" />

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/imgProfile"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_weight="0.5"
            android:padding="5dp"
            android:src="@mipmap/ic_launcher"
            app:riv_corner_radius="20dp" />
    </LinearLayout>

    <EditText
        android:id="@+id/etProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorTextBackground"
        android:fontFamily="@font/gilroy_bold"
        android:hint="@string/product"
        android:inputType="text"
        android:padding="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/colorText"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="162dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/etPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="15dp"
        android:background="@color/colorTextBackground"
        android:fontFamily="@font/gilroy_bold"
        android:hint="@string/price_you_want_to_pay"
        android:inputType="text"
        android:padding="15dp"
        android:textColor="@color/colorText"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="360dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/etLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorTextBackground"
        android:fontFamily="@font/gilroy_bold"
        android:hint="@string/where_to_buy"
        android:inputType="text"
        android:gravity="center"
        android:padding="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/colorText"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="257dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnProceed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginEnd="2dp"
        android:background="@color/colorDarkGray"
        android:text="@string/proceed"
        android:textColor="@color/colorAccent"
        tools:ignore="MissingConstraints" />

</LinearLayout>