<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">
    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/imageView_main"
        android:layout_width="374dp"
        android:layout_height="137dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="18dp"
        app:layout_constraintBottom_toTopOf="@+id/Buy_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.134"
        app:riv_corner_radius="5dp"
        tools:ignore="MissingConstraints"
        tools:srcCompat="@tools:sample/avatars" />


    <Button
        android:id="@+id/Buy_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="15dp"
        android:text="@string/buy"
        app:layout_constraintEnd_toStartOf="@+id/take_order_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_main"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/history_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="33dp"
        android:text="@string/history"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/take_order_button"
        app:layout_constraintTop_toBottomOf="@+id/imageView_main"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/take_order_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="30dp"
        android:text="@string/take_order"
        app:layout_constraintEnd_toStartOf="@+id/history_button"
        app:layout_constraintStart_toEndOf="@+id/Buy_button"
        app:layout_constraintTop_toBottomOf="@+id/imageView_main"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>