<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="32dp"
            android:src="@drawable/ic_back"
            android:padding="5dp"
            android:layout_marginStart="10dp"
            android:id="@+id/imageBack"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:textStyle="bold"
            android:fontFamily="@font/gilroy_light"
            android:textSize="15sp" />
    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:cardElevation="5dp"
        app:cardCornerRadius="5dp">
       <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
           android:padding="10dp"
            android:gravity="center">
           <com.makeramen.roundedimageview.RoundedImageView
               android:id="@+id/userImage"
               android:layout_width="120dp"
               android:layout_height="120dp"
               android:layout_marginStart="10dp"
               android:layout_marginEnd="10dp"
               android:layout_marginTop="10dp"
               android:src="@mipmap/ic_launcher"
               app:riv_border_color="@color/colorPrimary"
               app:riv_border_width="1dp"
               app:riv_corner_radius="20dp" />


           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:gravity="center"
               android:padding="10dp"
               android:orientation="vertical">
               <EditText
                   android:id="@+id/userName"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:background="@color/white"
                   android:layout_marginTop="10dp"
                   android:textAlignment="center"
                   android:fontFamily="@font/gilroy_light"
                   android:textSize="20sp"
                   android:maxLines="1"
                   tool:text="@string/Garruk" />
               <Button
                   android:id="@+id/btn_save"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_margin="15dp"
                   android:layout_marginEnd="2dp"
                   android:visibility="gone"
                   android:background="@color/colorDarkGray"
                   android:text="@string/save"
                   android:textColor="#64FFDA" />
               <ProgressBar
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:visibility="gone"
                   android:indeterminateTint="@color/design_default_color_primary_dark"
                   android:id="@+id/progressBar"/>

           </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>